--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-icons/all-files": "^4.1.0",
     "framer-motion": "^11.0.14",
     "react": "^18.2.0",
+    "react-countup": "^6.5.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
